src/objects/PP_FAQ_SubCategory__c.object
<CustomObject>
    <description>To store paystub faq&apos;s</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PP_FAQ_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PP FAQ Category</label>
        <referenceTo>PP_FAQ_Category__c</referenceTo>
        <relationshipName>PP_FAQ_SubCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PP_Subcategory_Type__c</fullName>
        <label>PP Subcategory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Deductions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution of Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Wages</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FAQ SubCategory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PP_FAQ_Category__c</columns>
        <columns>PP_Subcategory_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>FAQ SubCategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FAQ SubCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>